src/App.css
/* ... */
.popup-upgrade-mini-box-text {
  position: absolute;
  top: 15px;
  left: 14px;
  font-size: 15px;
  color: #442819;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: bold;
}

.popup-upgrade-info-text {
  text-align: center;
  padding-top: 15px;
  padding-bottom: 5px;
  font-size: 17px;
  color: #fdf611;
  text-shadow: 0em 0.1em #000, 0.038em 0.092em #000, 0.071em 0.071em #000, 0.092em 0.038em #000, 0.1em 0em #000, 0.092em -0.038em #000, 0.071em -0.071em #000, 0.038em -0.092em #000, 0em -0.1em #000, -0.038em -0.092em #000, -0.071em -0.071em #000, -0.092em -0.038em #000, -0.1em 0em #000, -0.092em 0.038em #000, -0.071em 0.071em #000, -0.038em 0.092em #000;
}

.popup-upgrade-mini-box-added {
  color: #fff;
  position: absolute;
  width: 80px;
  height: 10px;
  right: 23px;
  top: 10px;
  text-align: center;
  font-size: 15px;
  font-weight: bold;
}

.popup-box button {
  display: initial;
}

.popup-box .container {
  padding: 20px;
}

.logo-desktop,
.logo {
  /* position: relative;
  width: 100%;
  height: 200px;
  background-image: url(./assets/img/logo.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  top: 0px;
  z-index: 2; */
  position: absolute;
  background: url(./assets/img/logo.png) no-repeat;
  background-size: contain;
  z-index: 3;
  width: 140px;
  height: 100px;
  left: calc(50% - 25px);
  bottom: 85px;
}

.fc-add {
  right: 56px;
}

.popup-partners-input {
  font-family: Alternative, sans-serif !important;
  border: 0;
  background-color: transparent;
  width: 100%;
  box-sizing: border-box;
  height: 100%;
  padding-left: 10px;
  padding-right: 10px;
  color: #000;
  font-size: 16px;
  font-weight: bold;
  outline-width: 0;
}

.popup-partners-description {
  color: #fff;
  text-shadow: 0em 0.1em #000, 0.038em 0.092em #000, 0.071em 0.071em #000, 0.092em 0.038em #000, 0.1em 0em #000, 0.092em -0.038em #000, 0.071em -0.071em #000, 0.038em -0.092em #000, 0em -0.1em #000, -0.038em -0.092em #000, -0.071em -0.071em #000, -0.092em -0.038em #000, -0.1em 0em #000, -0.092em 0.038em #000, -0.071em 0.071em #000, -0.038em 0.092em #000;
  text-align: center;
  width: 300px;
  margin: 12px auto 0;
  font-size: 16px;
  font-weight: bold;
}

.popup-partners-header {
  text-align: center;
  margin-top: 40px;
  font-size: 20px;
  font-weight: bold;
  color: #fdf611;
  text-shadow: 0em 0.08em #000, 0.031em 0.074em #000, 0.057em 0.057em #000, 0.074em 0.031em #000, 0.08em 0em #000, 0.074em -0.031em #000, 0.057em -0.057em #000, 0.031em -0.074em #000, 0em -0.08em #000, -0.031em -0.074em #000, -0.057em -0.057em #000, -0.074em -0.031em #000, -0.08em 0em #000, -0.074em 0.031em #000, -0.057em 0.057em #000, -0.031em 0.074em #000;
}

.popup-partners-input-wrapper {
  width: 220px;
  height: 58px;
  margin: 10px auto 0;
  background-image: url(./assets/img/popup-partners-input.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.popup-partners-btn-copy {
  text-align: center;
  background-color: transparent;
  border: none;
  background-image: url(./assets/img/static/green-button.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  margin: 0 auto;
  width: 80px;
  height: 50px;
  color: #fff;
  font-size: 19px;
  font-weight: bold;
  display: flex;
  justify-content: center;
  align-items: center;
  text-shadow: 0em 0.1em #000, 0.038em 0.092em #000, 0.071em 0.071em #000, 0.092em 0.038em #000, 0.1em 0em #000, 0.092em -0.038em #000, 0.071em -0.071em #000, 0.038em -0.092em #000, 0em -0.1em #000, -0.038em -0.092em #000, -0.071em -0.071em #000, -0.092em -0.038em #000, -0.1em 0em #000, -0.092em 0.038em #000, -0.071em 0.071em #000, -0.038em 0.092em #000;
  padding-bottom: 5px;
  transition: transform 75ms linear;
}

.popup-partners-coins-bar,
.popup-partners-money-bar,
.popup-partners-users-bar {
  background-image: url(./assets/img/menu-bar.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  margin: 5px auto 0;
  width: 300px;
  height: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.popup-partners-coins-bar-icon,
.popup-partners-money-bar-icon,
.popup-partners-users-bar-icon {
  background-image: url(./assets/img/static/coin.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  width: 34px;
  height: 22px;
  margin-bottom: 3px;
  margin-right: 6px;
  margin-left: -15px;
}

.popup-partners-money-bar-icon {
  background-image: url(./assets/img/static/cash.png);
  height: 25px;
}

.popup-partners-users-bar-icon {
  background-image: url(./assets/img/referral.png);
  height: 24px;
}

.popup-partners-users-bar-text,
.popup-partners-coins-bar-text,
.popup-partners-money-bar-text {
  font-family: LilitaOne, sans-serif !important;
  font-weight: bold;
  color: #fff;
  text-shadow: 0em 0.1em #000, 0.038em 0.092em #000, 0.071em 0.071em #000, 0.092em 0.038em #000, 0.1em 0em #000, 0.092em -0.038em #000, 0.071em -0.071em #000, 0.038em -0.092em #000, 0em -0.1em #000, -0.038em -0.092em #000, -0.071em -0.071em #000, -0.092em -0.038em #000, -0.1em 0em #000, -0.092em 0.038em #000, -0.071em 0.071em #000, -0.038em 0.092em #000;
  font-size: 17px;
  padding-bottom: 3px;
  box-sizing: border-box;
}

.popup-partners-description span {
  /* font-size: 19px; */
  display: inline-block;
  margin-left: 5px;
}

.popup-partners-coin-icon {
  display: inline-block;
  background-image: url(./assets/img/static/coin.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  width: 30px;
  height: 25px;
  margin-right: -1px;
  transform: translate(0.5px, 5.5px);
}
/* ... */

